--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "portfolio-website",
-  "version": "0.1.0",
+  "name": "next-portfolio-workshop",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,16 +8,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.4.6",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "framer-motion": "^8.1.8",
-    "next": "13.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@chakra-ui/react": "^1.8.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "fast-glob": "^3.2.11",
+    "framer-motion": "^5.6.0",
+    "gray-matter": "^4.0.3",
+    "next": "12.0.9",
+    "next-mdx-remote": "^3.0.8",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
-    "eslint": "8.31.0",
-    "eslint-config-next": "13.1.1"
+    "eslint": "8.8.0",
+    "eslint-config-next": "12.0.9"
   }
 }
